// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas running shoes - men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 45388,
        "title": "Adidas running shoes - women",
      },
      "quantity": 3,
    },
  ],
  "total": 206940,
}
`;

exports[`Cart checkout() should return an object with the total and the list of items when sumary() is called 1`] = `
Object {
  "formatted": "R$3,131.04",
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas running shoes - men",
      },
      "quantity": 5,
    },
    Object {
      "product": Object {
        "price": 45388,
        "title": "Adidas running shoes - women",
      },
      "quantity": 3,
    },
  ],
  "total": Object {
    "amount": 313104,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
